--- a/css/about.css
+++ b/css/about.css
@@ -1,166 +1,164 @@
-
 .about {
-    width: 100%;
-    margin-top: 30px;
+  width: 100%;
+  margin-top: 30px;
 }
 
 .about-container {
-    width: 100%;
-    padding: 50px;
-    display: inline-block;
+  width: 100%;
+  padding: 50px;
+  display: inline-block;
 }
 
 .about-img {
-    width: 50%;
-    height: auto;
-    float: left;
+  width: 50%;
+  height: auto;
+  float: left;
 }
 
 .about-img img {
-    height: 350px;
-    margin-left: 20px;
+  height: 350px;
+  margin-left: 20px;
 }
 
 .about-img-map {
-    width: 43%;
-    height: auto;
-    float: right;
+  width: 43%;
+  height: auto;
+  float: right;
 }
 
 .about-img-map img {
-    height: 300px;
-    width: 650px;
+  height: 100%;
+  width: 100%;
 }
 
 .about-text {
-    animation: fromright 3s;
-    width: 50%;
-    margin-top: 20px;
-    float: right;
+  animation: fromright 3s;
+  width: 50%;
+  margin-top: 20px;
+  float: right;
 }
 
 .about-text-profile {
-    animation: fromleft 3s;
-    width: 40%;
-    margin-top: 20px;
-    margin-left: 20px;
-    float: left;
+  animation: fromleft 3s;
+  width: 40%;
+  margin-top: 20px;
+  margin-left: 20px;
+  float: left;
 }
 
 .about-text-profile b {
-    font-size: 20px;
-    color: hsl(209, 42%, 49%);
+  font-size: 20px;
+  color: hsl(209, 42%, 49%);
 }
 
 .about-button {
-    border-radius: 20px;
-    cursor: pointer;
-    color: #353b48;
-    text-decoration: none;
-    padding: 15px;
-    border: 1px solid #353b48;
+  border-radius: 20px;
+  cursor: pointer;
+  color: #353b48;
+  text-decoration: none;
+  padding: 15px;
+  border: 1px solid #353b48;
 }
 
 .about-button:hover {
-    border-radius: 20px;
-    cursor: pointer;
-    color: #fff;
-    text-decoration: none;
-    padding: 15px;
-    background-color: #353b48;
-    border: 5px solid #353b48;
+  border-radius: 20px;
+  cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  padding: 15px;
+  background-color: #353b48;
+  border: 5px solid #353b48;
 }
 
 .about-separator {
-    border-bottom: 2px solid lightgray;
-    margin: 50px;
+  border-bottom: 2px solid lightgray;
+  margin: 50px;
 }
 
 @keyframes fromleft {
-    from {
-        left: -30%;
-        opacity: 0%;
-    }
+  from {
+    left: -30%;
+    opacity: 0%;
+  }
 
-    to {
-        left: 0;
-        opacity: 100%;
-    }
+  to {
+    left: 0;
+    opacity: 100%;
+  }
 }
 
 @keyframes fromright {
-    from {
-        right: -30%;
-        opacity: 0%;
-    }
+  from {
+    right: -30%;
+    opacity: 0%;
+  }
 
-    to {
-        right: 0;
-        opacity: 100%;
-    }
+  to {
+    right: 0;
+    opacity: 100%;
+  }
 }
 
-@media (max-width: 640px) {
+@media (max-width: 1000px) {
+  .about {
+    margin-top: 10px;
+  }
 
-    .about {
-        margin-top: 10px;
-    }
+  .about-container {
+    display: block;
+    padding: 0;
+  }
 
-    .about-container {
-        display: block;
-        padding: 0;
-    }
+  .about-text {
+    text-align: center;
+    width: 100%;
+    height: auto;
+    float: none;
+    padding: 20px;
+  }
 
-    .about-text {
-        text-align: center;
-        width: 100%;
-        height: auto;
-        float: none;
-        padding: 20px;
-    }
+  .about-img {
+    width: 100%;
+    padding: 0;
+    height: auto;
+    float: none;
+  }
 
-    .about-img {
-        width: 100%;
-        padding: 0;
-        height: auto;
-        float: none;
-    }
+  .about-img img {
+    width: 100%;
+    padding: 20px;
+    height: auto;
+    margin-left: 0;
+  }
 
-    .about-img img {
-        width: 100%;
-        padding: 20px;
-        height: auto;
-        margin-left: 0;
-    }
+  .about-text-profile {
+    text-align: center;
+    margin-left: 0;
+    width: 100%;
+    height: auto;
+    float: none;
+    padding: 20px;
+  }
 
-    .about-text-profile {
-        text-align: center;
-        margin-left: 0;
-        width: 100%;
-        height: auto;
-        float: none;
-        padding: 20px;
-    }
+  .about-img-map {
+    width: 100%;
+    padding: 20px;
+    height: auto;
+    float: none;
+  }
 
-    .about-img-map {
-        width: 100%;
-        padding: 20px;
-        height: auto;
-        float: none;
-    }
+  .about-img-map img {
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+  }
 
-    .about-img-map img {
-        width: 100%;
-        height: auto;
-        margin-left: 0;
-    }
+  .about-text-profile h1 {
+    font-size: 25px;
+  }
 
-    .about-text-profile h1 {
-        font-size: 25px;
-    }
-
-    .about-text-profile b {
-        font-size: 20px;
-        color: hsl(209, 42%, 49%);
-    }
+  .about-text-profile b {
+    font-size: 20px;
+    color: hsl(209, 42%, 49%);
+  }
 }
