--- a/css/paket.css
+++ b/css/paket.css
@@ -3,7 +3,7 @@
 }
 
 .list-paket {
-  height: 90vh;
+  height: 100vh;
   background: linear-gradient(rgba(255, 255, 255, 0.397), rgba(255, 255, 255, 0.397)), url("../images/4853433.jpg");
   background-size: cover;
   color: #353b48;
@@ -11,6 +11,7 @@
   justify-items: center;
   align-items: center;
   text-align: center;
+  width: 100%;
 }
 
 .list-paket h1 {
@@ -33,13 +34,13 @@
 }
 
 .paket {
-  width: 100%;
-  margin: auto;
-  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
 .column {
   float: left;
-  width: 31%;
+  width: 32%;
   padding: 10px;
   height: auto;
   margin-right: 10px;
@@ -81,9 +82,9 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 1085px) {
+@media screen and (max-width: 1169px) {
   .list-paket {
-    height: 260vh;
+    height: 240vh;
     width: 100%;
   }
   .column {
